[workspace]
members = [
    "programs/liquidation-program",
    "cli",
    "engine"
]
resolver = "2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.release.build-override]
opt-level = 3

[profile.test]
opt-level = 3

[profile.bench]
opt-level = 3

[profile.dev]
opt-level = 1


