[package]
name = "liquidation-cli"
version = "0.1.0"
edition = "2021"
description = "CLI for the liquidation engine"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"

# Local dependencies
liquidation-engine = { path = "../engine" }
