[package]
name = "liquidation-engine"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.32", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
solana-client = "1.17"
solana-sdk = { version = "1.17", features = ["program"] }
solana-account-decoder = "1.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"

# Anchor dependencies
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
pyth-sdk-solana = "0.9.0"
async-trait = "0.1.80"
serde_derive = "1.0"
serde_with = "2.0"

# Import your on-chain program
liquidation-program = { path = "../programs/liquidation-program" }

[dev-dependencies]
serial_test = "1.0"
tempfile = "3.3"
