[package]
name = "liquidation-program"
version = "0.1.0"
edition = "2021"
description = "Solana program for liquidating undercollateralized positions in a perpetual futures exchange"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
skip-logs = []
test = []

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = "0.29.0"
solana-program = "1.17.0"
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }
arrayref = "0.3.7"
bytemuck = { version = "1.14.0", features = ["derive"] }
borsh = { version = "1.2.0", features = ["derive"] }
thiserror = "1.0.50"

[dev-dependencies]
anchor-lang = { version = "0.29.0", features = ["derive"] }
assert_matches = "1.5.0"
